add static_pages controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+		<div class="header">
+			<div class="header-container clearfix">
+				<h1 class="pagetitle">
+					<%= image_tag("Rail_Book.png", :size => "273x30", :alt => "") %>
+				</h1>
+			</div>
+		</div>
     <%= yield %>
   </body>
 </html>
