--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,605 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@charset "UTF-8";
+/* CSS Document */
+
+/*===========================================
+======大枠のレイアウト（footerをページ下部に）=========
+=============================================*/
+
+html,body,.container,.map{
+	width: 100%;
+	height: 100%;
+	font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", "sans-serif";
+}
+
+.container{
+	position: relative;
+}
+
+.footer{
+	position: fixed;
+	bottom: 0;
+}
+
+/*===========================================
+==============header関連の設定==================
+=============================================*/
+.header{
+	width: 100%;
+	background: #1479d4;
+	position: relative;
+}
+
+.header-container{
+	max-width: 980px;
+	margin: 0 auto;
+	padding: 10px 0px;
+}
+
+.header-container h1.pagetitle{
+	margin-left: 20px;
+	float: left;
+}
+
+.rightmenu{
+	float: right;
+	margin-right: 20px;
+}
+
+.rightmenu li{
+	float: left;
+	margin-left: 20px;
+}
+
+.csv{
+	width: 61px;
+	color: #fff;
+	font-size: 16px;
+	letter-spacing: 1.0px;
+	padding: 5px 15px 5px 35px;
+	text-align: center;
+	background: url(/assets/icon_csv.png) no-repeat 10px 50% #1479d4;
+	background-size: 12px 15px;
+	border: 1px dashed #fff;
+	cursor: pointer;
+}
+
+.login{
+	width: 63px;
+	color: #1479d4;
+	font-size: 16px;
+	letter-spacing: 1.6px;
+	font-weight: bold;
+	padding: 6px 15px 6px 35px;
+	text-align: center;
+	background: url(/assets/icon_login.png) no-repeat 10px 50% #fff;
+	border: none;
+	border-radius: 3px;
+	background-size: 15px 16px;
+	cursor: pointer;
+}
+
+.csv:hover{
+	opacity: 0.7;
+}
+
+.login:hover{
+	opacity: 0.7;
+}
+
+.dropbox{
+	position: absolute;
+	top: 70px;
+	left: 50%;
+	background-color: #fff;
+	border-radius: 3px;
+	padding: 20px;
+	z-index: 10;
+}
+
+.close{
+	font-size: 24px;
+	color: #c1c1c1;
+	position: absolute;
+	top: 5px;
+	right: 10px;
+	cursor: pointer;
+}
+
+.close:hover{
+	color: #DCDCDC;
+}
+
+.lead{
+	color: #666;
+	margin: 10px 0;
+	font-size: 16px;
+}
+
+.dropzone{
+	width: 400px;
+	height: 250px;
+	background-color: #f5f5f5;
+	border: 2px dashed #c1c1c1;
+	position: relative;
+}
+
+.circle{
+	width: 180px;
+	height: 180px;
+	background: url(/assets/cloud.png) left 61px top 37px no-repeat #2b92ee;
+	background-size: 52px 50px;
+	border-radius: 90px;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+
+.circle p{
+	font-size: 16px;
+	text-align: center;
+	color: #fff;
+	padding-top: 97px;
+	line-height: 28px;
+}
+
+.refer{
+	text-decoration: underline;
+	cursor: pointer;
+}
+.refer:hover{
+	opacity: 0.7;
+}
+
+/*===========================================
+========footer関連の設定（初期表示バー）===========
+=============================================*/
+
+.footer,
+.footbar,
+.record{
+	width: 100%;
+}
+
+.footbar{
+	background: #143f9e;
+	cursor: pointer;
+}
+
+.footbar:hover{
+	background-color: #3657A1;	
+}
+
+.footbar-container{
+	max-width: 980px;
+	margin: 0 auto;
+}
+
+.footbar-container h2.footer_title{
+	color: #FFFFFF;
+	text-align: center;
+	font-size: 20px;
+	font-weight: bold;
+	padding: 20px 0;
+	background-image: url(/assets/open_bar.png) ,url(/assets/open_bar.png);
+	background-position: left 20px bottom 50%,right 20px bottom 50%;
+	background-repeat: no-repeat,no-repeat;
+}
+
+
+/*===========================================
+=====footer関連の設定（デフォルト非表示）=============
+=============================================*/
+.record{
+	background: #54a5ee;
+}
+
+.record_container{
+	width: 980px;
+	margin: 0 auto;
+	padding: 10px 0 30px;
+}
+
+.choice{
+	float: left;
+	background: url(/assets/triangle.png) no-repeat 0 50%;
+	background-size: 16px 20px;
+	margin-left: 20px;
+	padding-left: 36px;
+}
+
+.choice:first-child{
+	padding-left: 0;
+	background: none;
+}
+
+.choice-title{
+	font-size: 16px;
+	color: #fff;
+	font-weight: bold;
+	width: 178px;
+	text-align: center;
+	padding: 10px 0;
+}
+
+.choice ul{
+	background: #fff;
+	width: 178px;
+	border-radius: 5px;
+	float: left;
+	height: 350px;
+}
+
+/*一番左の.choice-titleだけ幅が160px*/
+#allarea .choice-title,
+#allarea ul{
+	width: 160px;
+}
+
+.choice ul{
+	background: #EDEDED;
+}
+
+.choice ul li{
+	font-size: 14px;
+	color: #333333;
+	font-weight: bold;
+	border-bottom: 1px solid #b7b7b7;
+	padding: 12px 36px 12px 10px;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	background: url(/assets/checkbox.png) no-repeat right 10px top 50% #fff;
+	background-size: 18px;
+	cursor: pointer;
+}
+
+.choice ul li:last-child{
+	border-bottom: none;
+}
+
+.choice ul li:hover{
+	background: #e0e0e0 url(/assets/checkbox_hover.png) no-repeat right 10px top 50%;
+	background-size: 18px;
+}
+
+.choice ul li.checked{
+	color: #fff;
+	background: #f7a349 url(/assets/checkbox_checked.png) no-repeat right 10px top 50%;
+	background-size: 18px;
+}
+
+/*スクロールバー隣接部分のradius設定*/
+.choice ul li:first-child,
+.choice ul li:first-child:hover{
+	border-radius: 5px 0 0 0;
+}
+.choice ul li:last-child,
+.choice ul li:last-child:hover{
+	border-radius: 0 0 0 5px;
+}
+
+/*乗車地域選択のみスクロールバーがないため、radiusの設定*/
+#allarea ul li:first-child,
+#allarea ul li:first-child:hover{
+	border-radius: 5px 5px 0 0;
+}
+#allarea ul li:last-child,
+#allarea ul li:last-child:hover{
+	border-radius: 0 0 5px 5px;
+}
+
+/*===========================================
+=============スクロールバーの設定=================
+=============================================*/
+
+.scroll{
+	overflow-y: scroll;	
+	scrollbar-base-color: #fcc800;  /*ie用スクロールバー色*/
+}
+
+/*スクロールバー幅*/
+.scroll::-webkit-scrollbar{
+	width: 8px;
+	height: auto;
+}
+
+/*スクロールバー背景*/
+.scroll::-webkit-scrollbar-track{
+	background: #e1e1e1;
+	border-radius: 3px;
+}
+
+/*スクロールバー本体*/
+.scroll::-webkit-scrollbar-thumb{
+	background: #3e78ac;
+	border-radius: 3px;
+}
+
+/*===========================================
+==================カラム４=====================
+=============================================*/
+.pulldown{
+	width: 254px;
+	padding-top: 36px;
+	margin-left: 2px;
+	background: url(/assets/bgPulldown.png) no-repeat 117px 80px;
+}
+
+.pulldown-title{
+	width: 57px;
+	font-size: 16px;
+	letter-spacing: 2.56px;
+	color: #fff;
+	font-weight: bold;
+	padding: 10px 0;
+	margin-top: 4px;
+	float: left;
+}
+
+.pulldown select{
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	padding: 0 50px 0 10px;
+	font-size: 16px;
+}
+
+.pulldown select:hover{
+	opacity: 0.8;
+}
+
+.pulldown select.select-onstation{
+	border: 4px solid #9c6;
+	background: url(/assets/arrow_green.png) no-repeat right center #fff;
+}
+
+.pulldown select.select-offstation{
+	border: 4px solid #e9a0a2;
+	background: url(/assets/arrow_red.png) no-repeat right center #fff;
+}
+
+.pulldown select.date{
+	border: 4px solid #c6c6c6;
+	background: url(/assets/arrow_gray.png) no-repeat right center #fff;
+}
+
+.pulldown select.large_box{
+	width: 177px;
+	height: 44px;
+	margin: 0 0 20px 20px;
+}
+
+.pulldown select.small_box{
+	display: block;
+	float: left;
+	width: 112px;
+	height: 44px;
+}
+
+.pulldown select.select-month{
+	margin-bottom: 60px;
+	margin-left: 25px;
+}
+
+.pulldown select.select-date{
+	float: left;
+	margin-left: 5px;	
+}
+
+
+/*===========================================
+==================決定ボタン==================
+=============================================*/
+
+.pulldown .btn{
+	/*reset*/
+	border: none;
+	cursor: pointer;
+	outline: none;
+	/*reset end*/
+	margin-left: 94px;
+	width: 160px;
+	height: 45px;
+	font-size: 24px;
+	letter-spacing: 22px;
+	text-indent: 22px;
+	color: #fff;
+	font-weight: bold;
+	text-align: center;
+	background-color: #04d9d9;
+	border-radius: 3px;
+	border-bottom: 3px solid #00abab;
+}
+
+.pulldown .btn:hover{
+	background-color: #70F3DA;
+}
+
+#record,#allcompany,#allrail,#pulldown,#dropbox{
+	display: none;
+}
+
+
+/*===========================================
+=============今だけの仮設定==================
+=============================================*/
+
+.map{
+	background: #A9FFFF;
+}
+
+.map-container{
+	text-align: center;
+	font-size: 50px;
+	line-height: 1.4;
+	height: 100%;
+}
+
+.leaflet-zoom-hide {
+	width: 960px;
+	height: 500px;
+}
+
+/*
+YUI 3.6.0 (build 5521)
+Copyright 2012 Yahoo! Inc. All rights reserved.
+Licensed under the BSD License.
+http://yuilibrary.com/license/
+*/
+/*
+	TODO will need to remove settings on HTML since we can't namespace it.
+	TODO with the prefix, should I group by selector or property for weight savings?
+*/
+html{
+	color:#000;
+	background:#FFF;
+}
+/*
+	TODO remove settings on BODY since we can't namespace it.
+*/
+/*
+	TODO test putting a class on HEAD.
+		- Fails on FF. 
+*/
+body,
+div,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+pre,
+code,
+form,
+fieldset,
+legend,
+input,
+textarea,
+p,
+blockquote,
+th,
+td {
+	margin:0;
+	padding:0;
+}
+table {
+	border-collapse:collapse;
+	border-spacing:0;
+}
+fieldset{
+	border:0;
+}
+
+img{
+	border: 0;
+	vertical-align: top;
+}
+
+a{
+	outline: none;
+}
+/*
+	TODO think about hanlding inheritence differently, maybe letting IE6 fail a bit...
+*/
+address,
+caption,
+cite,
+code,
+dfn,
+em,
+strong,
+th,
+var {
+	font-style:normal;
+	font-weight:normal;
+}
+
+ol,
+ul {
+	list-style:none;
+}
+
+caption,
+th {
+	text-align:left;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-size:100%;
+	font-weight:normal;
+}
+q:before,
+q:after {
+	content:'';
+}
+abbr,
+acronym {
+	border:0;
+	font-variant:normal;
+}
+/* to preserve line-height and selector appearance */
+sup {
+	vertical-align:text-top;
+}
+sub {
+	vertical-align:text-bottom;
+}
+input,
+textarea,
+select {
+	font-family:inherit;
+	font-size:inherit;
+	font-weight:inherit;
+}
+/*to enable resizing for IE*/
+input,
+textarea,
+select {
+	*font-size:100%;
+}
+/*because legend doesn't inherit in IE */
+legend {
+	color:#000;
+}
+/* YUI CSS Detection Stamp */
+#yui3-css-stamp.cssreset { display: none; }
+
+body{
+	line-height:1.0;
+}
+
+
+
+/*フロート解除用のハック*/
+/*clearfixの設定*/
+.clearfix:after{  
+	visibility:hidden;/*見えなくする*/ 
+	height:0;/*見えなくする*/
+	display: block;/*block要素にする*/
+	font-size: 0;  
+	content: " ";  
+	clear: both;  
+
+}  
+* html .clearfix             { zoom: 1; } /* IE6 */  
+*:first-child+html .clearfix { zoom: 1; } /* IE7 */
+
+
+
